# Phalanx

./: .gitignore  CLAUDE.md  LICENSE  LOCAL_CHESS_ENGINE_V2.md  LOCAL_CHESS_ENGINE_V3.md  Plan-layout.txt  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py  settings_store.py
backend/app/api/routes/: analysis.py  coach.py  games.py  openings.py  puzzles.py  settings.py
backend/app/coach/: llm.py  service.py  template.py
backend/app/engine/: analysis.py  lc0.py  manager.py  pawn_structure.py  protocol.py  stockfish.py  tablebase.py  threats.py
backend/app/models/: schemas.py
backend/app/openings/: repertoire.py
backend/app/puzzles/: puzzle_db.py  puzzle_service.py
backend/app/review/: chesscom.py  lichess.py  pgn.py
backend/tests/: conftest.py
backend/tests/test_coach/: test_template.py
backend/tests/test_engine/: test_analysis.py  test_pawn_structure.py  test_threats.py
backend/tests/test_openings/: test_repertoire.py
backend/tests/test_puzzles/: test_puzzle_service.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: openings.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  KeyboardShortcutsHelp.tsx
frontend/src/contexts/: ActiveTabContext.tsx  SettingsContext.tsx
frontend/src/hooks/: useChessClock.ts  useChessGame.ts  useCoach.ts  useEngine.ts  useGameReview.ts  useOpeningName.ts  usePuzzles.ts  useRepertoire.ts
frontend/src/services/: analysisCache.ts  api.ts  (+3 more)
scripts/: chess  download-puzzles  download-syzygy
(+24 files in other folders)
